--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Site Title Here</title>
+        <title>Rombo Ai</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
 		<link rel="shortcut icon" type="image/x-icon" href="#">
         <!-- Place favicon.ico in the root directory -->
         
 		<!-- CSS here -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> 
+        <link href="assets/css/bootstrap.min.css" rel="stylesheet"> 
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="assets/css/responsive.css">
     </head>
@@ -379,7 +379,7 @@
                 <div class="container">
                     <div class="row align-items-end">
                         <div class="col-lg-8 d-none d-md-block">
-                            <p>© 2020 Rombo AI. All Rights Reserved | Privacy Policy</p>
+                            <p>© 2020 Rombo AI. All Rights Reserved | <a href="#">Privacy Policy</a></p>
                         </div>
                         <div class="col-lg-4">
                             <div class="right-links"> 
@@ -402,7 +402,7 @@
                             </div>
                         </div>
                         <div class="col-lg-8 d-block d-md-none">
-                            <p>© 2020 Rombo AI. All Rights Reserved | Privacy Policy</p>
+                            <p>&#169; 2020 Rombo AI. All Rights Reserved | <a href="#">Privacy Policy</a></p>
                         </div>
                     </div>
                 </div>
@@ -416,10 +416,8 @@
 
 
 		<!-- JS here --> 
-        <script src="assets/js/vendor/jquery-3.4.1.min.js"></script> 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script> 
-        <script src="assets/js/plugins.js"></script> 
-        <script src="assets/js/main.js"></script>
-
+        <script src="assets/js/vendor/jquery-3.5.1.min.js"></script> 
+        <script src="assets/js/bootstrap.bundle.min.js"></script>  
+        <script src="assets/js/main.js"></script> 
     </body>
 </html>
