--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
             <!-- Hero-area START -->
-            <div class="hero-area">
+            <div class="hero-area">k
                 <img src="assets/img/Background.png" alt="">
                 <div class="container">
                     <div class="row">
@@ -378,7 +378,7 @@
                 <img src="assets/img/footer.png" alt="">
                 <div class="container">
                     <div class="row align-items-end">
-                        <div class="col-lg-8 d-none d-md-block">
+                        <div class="col-lg-8 d-none d-lg-block">
                             <p>© 2020 Rombo AI. All Rights Reserved | <a href="#">Privacy Policy</a></p>
                         </div>
                         <div class="col-lg-4">
@@ -401,7 +401,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-8 d-block d-md-none">
+                        <div class="col-lg-8 d-block d-lg-none">
                             <p>&#169; 2020 Rombo AI. All Rights Reserved | <a href="#">Privacy Policy</a></p>
                         </div>
                     </div>
