--- a/index.html
+++ b/index.html
@@ -306,66 +306,70 @@
             <!-- contact-area START -->
             <div class="contact-area">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <div class="contact-wrp">
-                                <h4>Rely on our 10+ experience in 
-                                    AI to innovate your company.</h4>
-                                <p>Ready to transform your 
-                                    company? AI It’s easier than 
-                                    you might think with Rombo AI.</p> 
+                    <div class="contacts"> 
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="contact-wrp">
+                                    <h4>Rely on our 10+ experience in 
+                                        AI to innovate your company.</h4>
+                                    <p>Ready to transform your 
+                                        company? AI It’s easier than 
+                                        you might think with Rombo AI.</p> 
+                                </div>
                             </div>
-                        </div>
-                        <img src="assets/img/Contact.png" alt="" class="snape-img">
-                        <div class="col-lg-6">
-                            <div class="contact-form">
-                                <form action="">
-                                    <h4>Let's chat</h4>
-                                    <div class="row">
-                                        <div class="col-lg-6"><input type="text" placeholder="Name"></div>
-                                        <div class="col-lg-6"><input type="text" placeholder="Surname"></div>
-                                        <div class="col-lg-12"><input type="email" placeholder="E-mail"></div>
-                                        <div class="col-lg-12"><input type="text" placeholder="Company"></div>
-                                        <div class="col-lg-6"><input type="text" placeholder="Telephone"></div>
-                                        <div class="col-lg-6">
-                                            <div class="select"> 
-                                                <span>
-                                                    <svg xmlns="http://www.w3.org/2000/svg" width="18.992" height="10.826" viewBox="0 0 18.992 10.826">
-                                                    <g id="arrow-down-sign-to-navigate" transform="translate(-0.001 -97.141)">
-                                                        <path id="Path_1889" data-name="Path 1889" d="M9.5,107.966a1.326,1.326,0,0,1-.94-.389L.39,99.411A1.33,1.33,0,0,1,2.271,97.53L9.5,104.756l7.225-7.226A1.33,1.33,0,0,1,18.6,99.411l-8.166,8.166A1.326,1.326,0,0,1,9.5,107.966Z" transform="translate(0 0)" fill="#575757"/>
+                            <div class="snape-img">
+                                <img src="assets/img/Contact.png" alt="">
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="contact-form">
+                                    <form action="">
+                                        <h4>Let's chat</h4>
+                                        <div class="row">
+                                            <div class="col-lg-6"><input type="text" placeholder="Name"></div>
+                                            <div class="col-lg-6"><input type="text" placeholder="Surname"></div>
+                                            <div class="col-lg-12"><input type="email" placeholder="E-mail"></div>
+                                            <div class="col-lg-12"><input type="text" placeholder="Company"></div>
+                                            <div class="col-lg-6"><input type="text" placeholder="Telephone"></div>
+                                            <div class="col-lg-6">
+                                                <div class="select"> 
+                                                    <span>
+                                                        <svg xmlns="http://www.w3.org/2000/svg" width="18.992" height="10.826" viewBox="0 0 18.992 10.826">
+                                                        <g id="arrow-down-sign-to-navigate" transform="translate(-0.001 -97.141)">
+                                                            <path id="Path_1889" data-name="Path 1889" d="M9.5,107.966a1.326,1.326,0,0,1-.94-.389L.39,99.411A1.33,1.33,0,0,1,2.271,97.53L9.5,104.756l7.225-7.226A1.33,1.33,0,0,1,18.6,99.411l-8.166,8.166A1.326,1.326,0,0,1,9.5,107.966Z" transform="translate(0 0)" fill="#575757"/>
+                                                        </g>
+                                                        </svg>
+                                                        </span>
+                                                    <select name="" id="">  
+                                                        <option value="">Employees</option>
+                                                        <option value="">Student</option>
+                                                        <option value="">Seeker</option> 
+                                                    </select>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-12"><textarea placeholder="Type your message here..."></textarea></div>
+                                            <div class="col-lg-12">
+                                                <label for="ckb" class="ckb">
+                                                    <input id="ckb" type="checkbox">
+                                                    Lorem ipsum dolor sit amet, 
+                                                    consectetur adipiscing elit.
+                                                    <span class="checkmark"></span>
+                                                </label>
+                                            </div>
+                                            <div class="col-lg-12">
+                                                <button class="theme-btn">SUBMIT <span>
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="28.513" height="23.721" viewBox="0 0 28.513 23.721">
+                                                    <g id="right-arrow" transform="translate(0 0)">
+                                                        <g id="Group_22" data-name="Group 22" transform="translate(0 0)">
+                                                        <path id="Path_1869" data-name="Path 1869" d="M28.057,52.1,17.76,41.8a1.565,1.565,0,0,0-2.207,0l-.935.935a1.549,1.549,0,0,0-.456,1.1,1.58,1.58,0,0,0,.456,1.116l6.007,6.02H1.54A1.523,1.523,0,0,0,0,52.511v1.322a1.581,1.581,0,0,0,1.54,1.6H20.694l-6.075,6.054a1.545,1.545,0,0,0,0,2.191l.935.932a1.565,1.565,0,0,0,2.207,0l10.3-10.3a1.574,1.574,0,0,0,0-2.215Z" transform="translate(0 -41.346)" fill="#fff"/>
+                                                        </g>
                                                     </g>
                                                     </svg>
                                                     </span>
-                                                <select name="" id="">  
-                                                    <option value="">Employees</option>
-                                                    <option value="">Student</option>
-                                                    <option value="">Seeker</option> 
-                                                </select>
+                                                </button>
                                             </div>
                                         </div>
-                                        <div class="col-lg-12"><textarea placeholder="Type your message here..."></textarea></div>
-                                        <div class="col-lg-12">
-                                            <label for="ckb" class="ckb">
-                                                <input id="ckb" type="checkbox">
-                                                Lorem ipsum dolor sit amet, 
-                                                consectetur adipiscing elit.
-                                                <span class="checkmark"></span>
-                                            </label>
-                                        </div>
-                                        <div class="col-lg-12">
-                                            <button class="theme-btn">SUBMIT <span>
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="28.513" height="23.721" viewBox="0 0 28.513 23.721">
-                                                <g id="right-arrow" transform="translate(0 0)">
-                                                    <g id="Group_22" data-name="Group 22" transform="translate(0 0)">
-                                                    <path id="Path_1869" data-name="Path 1869" d="M28.057,52.1,17.76,41.8a1.565,1.565,0,0,0-2.207,0l-.935.935a1.549,1.549,0,0,0-.456,1.1,1.58,1.58,0,0,0,.456,1.116l6.007,6.02H1.54A1.523,1.523,0,0,0,0,52.511v1.322a1.581,1.581,0,0,0,1.54,1.6H20.694l-6.075,6.054a1.545,1.545,0,0,0,0,2.191l.935.932a1.565,1.565,0,0,0,2.207,0l10.3-10.3a1.574,1.574,0,0,0,0-2.215Z" transform="translate(0 -41.346)" fill="#fff"/>
-                                                    </g>
-                                                </g>
-                                                </svg>
-                                                </span>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </form>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
