--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
             <!-- Hero-area START -->
-            <div class="hero-area">k
+            <div class="hero-area">
                 <img src="assets/img/Background.png" alt="">
                 <div class="container">
                     <div class="row">
